Fixing navbar spacing

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -26,6 +26,11 @@
   object-fit: cover;
 }
 
+.chatlink {
+  margin-left: 8rem;
+  margin-right: -8rem;
+}
+
 .menu {
   display: none;
   flex: 1;
@@ -105,6 +110,11 @@
   .nav {
     justify-content: space-between;
     padding: 1rem;
+  }
+
+  .chatlink{
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .logo {
